Squashed commit of the following:
commit cee54f7b49cbb96aeec11a72b52fecfa7d686582
Author: Sjoerd Stendahl <sstendahl@gnome.org>
Date:   Fri Oct 18 07:54:52 2024 +0000

    sync blueprints

commit e2407ce264211b0e398af33fd7e94bd878f9972d
Author: Sjoerd Stendahl <sstendahl@gnome.org>
Date:   Thu Oct 17 20:55:32 2024 +0000

    fix line length

commit 7881cd90821e4bb3290c4c2ea9d713f40b9ca9dc
Author: Sjoerd Stendahl <sstendahl@gnome.org>
Date:   Thu Oct 17 20:34:38 2024 +0000

    sync to main

commit edb628006364e9ac4eb4bc6ba068b3e2f30268a1
Author: Sjoerd Stendahl <sstendahl@gnome.org>
Date:   Sun Oct 6 10:25:25 2024 +0000

    further tweaks

commit 07b24047e8f760548751e5c02230ebcc06b0471e
Merge: 4900ee39 7bfe9746
Author: Sjoerd Stendahl <sstendahl@gnome.org>
Date:   Sat Oct 5 11:53:29 2024 +0000

    Merge branch 'equation-operations-refactor' into 'equation-operations'

    Update operations action

    See merge request World/Graphs!953

commit 7bfe9746c895a65683f5fcaade59e90afd4daf6b
Author: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>
Date:   Sat Oct 5 12:43:30 2024 +0200

    Update operations action

    Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

commit c527e221e04536ae701a985eed7166e1638a8e99
Merge: 4900ee39 c5c25aeb
Author: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>
Date:   Sat Oct 5 12:24:56 2024 +0200

    merge

    Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

commit c5c25aeb859890d3587fc40833ca1958eb9960ec
Merge: 81ac82fc 400ed73d
Author: Sjoerd Stendahl <sstendahl@gnome.org>
Date:   Sat Oct 5 07:53:41 2024 +0000

    Merge branch 'multiinstance' into 'main'

    Allow multiple instances of Graphs

    Closes #774 and #766

    See merge request World/Graphs!949

commit 400ed73d358fc9aceac7fe947136270a8a09fba4
Author: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>
Date:   Sat Oct 5 07:53:41 2024 +0000

    Allow multiple instances of Graphs

commit 81ac82fc00f4b9

--- a/data/meson.build
+++ b/data/meson.build
@@ -30,7 +30,7 @@ appstream_file = i18n.merge_file(
        output: application_id + '.appdata.xml',
        po_dir: '../po',
       install: true,
-  install_dir: join_paths(datadir, 'appdata'),
+  install_dir: join_paths(datadir, 'metainfo'),
 )
 
 # Validate Appdata
@@ -44,7 +44,6 @@ endif
 
 install_data(application_id + '.gschema.xml',
   install_dir: join_paths(datadir, 'glib-2.0/schemas'),
- install_mode: 'rwxrwxrwx',
 )
 gnome.compile_schemas(
   depend_files: [application_id + '.gschema.xml'],
@@ -62,10 +61,13 @@ if compile_schemas.found()
 endif
 
 blueprint_files = [
+  'ui/dialogs/delete-style.blp',
+  'ui/dialogs/reset-import-settings.blp',
+  'ui/dialogs/save-project-changes.blp',
+  'ui/dialogs/save-style-changes.blp',
   'ui/add-equation.blp',
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
-  'ui/dialogs.blp',
   'ui/edit-item.blp',
   'ui/export-figure.blp',
   'ui/figure-settings-dialog.blp',
@@ -74,14 +76,15 @@ blueprint_files = [
   'ui/import.blp',
   'ui/import-columns.blp',
   'ui/item-box.blp',
-  'ui/shortcuts.blp',
   'ui/smoothen-settings.blp',
   'ui/style-color-box.blp',
-  'ui/style-editor.blp',
+  'ui/style-editor-box.blp',
+  'ui/style-editor-shortcuts.blp',
   'ui/style-editor-window.blp',
   'ui/style-preview.blp',
   'ui/transform.blp',
   'ui/window.blp',
+  'ui/window-shortcuts.blp',
 ]
 
 blueprints_ui = []
@@ -176,12 +179,6 @@ gresource = custom_target('gresource',
     '--icons', icons,
     '--other', other,
   ],
-)
-
-gresource_hack = custom_target('gresource_hack',
-    input: gresource,
-   output: 'gresource_hack.vala',
-  command: [find_program('touch'), '@OUTPUT@'],
 )
 
 gresource_bundle = gnome.compile_resources(application_id, gresource,
