--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -31,6 +31,7 @@ python.install_sources(
     'style_io.py',
     'styles.py',
     'utilities.py',
+    'window.py',
   ),
   subdir: meson.project_name(),
 )
@@ -44,7 +45,7 @@ config_dep = valac.find_library('config',
 )
 graphs_lib = shared_library('graphs',
   files(
-    'about.vala',
+    'actions.vala',
     'add_equation.vala',
     'application.vala',
     'canvas.vala',
@@ -61,11 +62,12 @@ graphs_lib = shared_library('graphs',
     'project.vala',
     'python_helper.vala',
     'smoothen_settings.vala',
+    'style_editor.vala',
     'styles.vala',
     'transform.vala',
     'utilities.vala',
     'window.vala',
-  ), gresource_hack, gresource_bundle,
+  ), gresource_bundle,
              vala_gir: 'Graphs-1.gir',
          dependencies: dependencies + config_dep,
   include_directories: include_directories('.'),
