--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ inline-quotes = double
 
 per-file-ignores =
         migrate.py: SCS113
-        operations.py: N805
+        operations.py: N805, PIE798
 exclude =
         _build
 
