--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -54,10 +54,17 @@ parts:
       - PYTHONPATH: $CRAFT_STAGE/usr/lib/python3/dist-packages:$PYTHONPATH
     build-snaps:
       - blueprint-compiler/latest/edge 
+    override-build: |
+      craftctl default
+      sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/graphs/current/usr/bin/graphs
+      mkdir -p $CRAFT_PART_INSTALL/meta/gui
+      cp -r $CRAFT_PART_INSTALL/snap/graphs/current/usr/share/icons $CRAFT_PART_INSTALL/meta/gui/
+      for i in `find $CRAFT_PART_INSTALL/meta/gui/icons -name "*.svg" -o -name "*.png"`; do
+        mv $i "`dirname $i`/snap.$CRAFT_PROJECT_NAME.`basename $i`"
+      done
     organize:
       snap/graphs/current/usr: usr
-    parse-info: [usr/share/appdata/se.sjoerd.Graphs.appdata.xml]
-    
+    parse-info: [usr/share/appdata/se.sjoerd.Graphs.appdata.xml]    
     
 apps:
   graphs:
