--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,9 @@ ignore = U101, W503, SCS108, N812, D107
 inline-quotes = double
 
 per-file-ignores =
+	data.py: PIE786
         migrate.py: SCS113
-        data.py: PIE786
+        operations.py: PIE798
 exclude =
         _build
 
