--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -55,6 +55,7 @@ graphs_lib = shared_library('graphs',
     'export_items.vala',
     'figure_settings.vala',
     'file_import.vala',
+    'generate_data.vala',
     'item.vala',
     'inline-stack-switcher.vala',
     'item_box.vala',
