rework edit item dialog
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -51,6 +51,7 @@ graphs_lib = shared_library('graphs',
     'canvas.vala',
     'curve_fitting.vala',
     'data.vala',
+    'edit_item.vala',
     'export_figure.vala',
     'export_items.vala',
     'figure_settings.vala',
