Rework Edit Item Dialog & Implement editing Generated Datasets

--- a/data/meson.build
+++ b/data/meson.build
@@ -69,6 +69,9 @@ blueprint_files = [
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
   'ui/edit-item.blp',
+  'ui/edit-item-data.blp',
+  'ui/edit-item-equation.blp',
+  'ui/edit-item-generated-data.blp',
   'ui/export-figure.blp',
   'ui/figure-settings-dialog.blp',
   'ui/figure-settings-page.blp',
