Factor out operation widgets

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -61,6 +61,7 @@ graphs_lib = shared_library('graphs',
     'inline-stack-switcher.vala',
     'item_box.vala',
     'misc.vala',
+    'operations.vala',
     'project.vala',
     'python_helper.vala',
     'smoothen_settings.vala',
