Advertise support for small formfactors again
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/data/se.sjoerd.Graphs.appdata.xml.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in
@@ -567,8 +567,14 @@
   <recommends>
     <control>keyboard</control>
     <control>pointing</control>
-    <control>touch</control>
   </recommends>
+  <supports>
+    <control>touch</control>
+    <control>tablet</control>
+  </supports>
+  <requires>
+    <display_length>360</display_length>
+  </requires>
   <branding>
     <color type="primary" scheme_preference="light">#99c1f1</color>
     <color type="primary" scheme_preference="dark">#09356d</color>
