--- a/data/se.sjoerd.Graphs.desktop.in
+++ b/data/se.sjoerd.Graphs.desktop.in
@@ -8,3 +8,4 @@ Categories=Education;Science
 StartupNotify=true
 MimeType=application/graphs;text/mplstyle;text/plain;text/xy;text/dat;text/csv;text/xrdml;text/xry;text/txt
 Keywords=Plotting;Graph;Graphing;Science;Mathematics;Math;Equations;Data;Plot;Visualisation;Visualization;Fitting;xrdml;
+X-Purism-FormFactor=Workstation;Mobile;
