--- a/meson.build
+++ b/meson.build
@@ -33,7 +33,7 @@ python = import('python').find_installation('python3')
 
 prefix = get_option('prefix')
 datadir = get_option('datadir')
-bindir = get_option('bindir')
+bindir = join_paths(prefix, get_option('bindir'))
 version = meson.project_version()
 pkgdatadir = join_paths(prefix, datadir, meson.project_name())
 localedir = join_paths(prefix, get_option('localedir'))
@@ -51,6 +51,7 @@ conf.set('COPYRIGHT', copyright)
 conf.set('VCS_URL', vcs_url)
 conf.set('ISSUE_URL', issue_url)
 conf.set('HELP_URL', help_url)
+conf.set('BINDIR', bindir)
 conf.set('LOCALEDIR', localedir)
 conf.set('PKGDATADIR', pkgdatadir)
 conf.set('PROJECT_NAME', meson.project_name())
