--- a/meson.build
+++ b/meson.build
@@ -34,6 +34,7 @@ python = import('python').find_installation('python3')
 prefix = get_option('prefix')
 datadir = get_option('datadir')
 bindir = join_paths(prefix, get_option('bindir'))
+libdir = get_option('libdir')
 version = meson.project_version()
 pkgdatadir = join_paths(prefix, datadir, meson.project_name())
 localedir = join_paths(prefix, get_option('localedir'))
