--- a/graphs/graphs.in
+++ b/graphs/graphs.in
@@ -6,7 +6,7 @@
 # @HOMEPAGE_URL@
 # @VCS_URL@
 #
-# Copyright @COPYRIGHT@ @AUTHOR@
+# Copyright @COPYRIGHT@ The Graphs Developers
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
