--- a/graphs/graphs.in
+++ b/graphs/graphs.in
@@ -24,6 +24,7 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 """Main graphs module."""
 
+import asyncio
 import gettext
 import locale
 import logging
@@ -66,6 +67,9 @@ if __name__ == "__main__":
     loglevel = logging.DEBUG if debug else logging.INFO
     logging.basicConfig(format="%(levelname)s: %(message)s", level=loglevel)
     logging.getLogger("matplotlib.font_manager").disabled = True
+
+    from gi.events import GLibEventLoopPolicy
+    asyncio.set_event_loop_policy(GLibEventLoopPolicy())
 
     from graphs.application import PythonApplication
     application = PythonApplication(
