remove debug var
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/graphs/graphs.in
+++ b/graphs/graphs.in
@@ -61,9 +61,7 @@ if __name__ == "__main__":
     resource = Gio.Resource.load(gresource_location)
     resource._register()
 
-    debug = @DEBUG@
-
-    loglevel = logging.DEBUG if debug else logging.INFO
+    loglevel = logging.DEBUG if @DEBUG@ else logging.INFO
     logging.basicConfig(format="%(levelname)s: %(message)s", level=loglevel)
     logging.getLogger("matplotlib.font_manager").disabled = True
 
@@ -71,6 +69,5 @@ if __name__ == "__main__":
     application = PythonApplication(
         application_id="@APPLICATION_ID@",
         flags=Gio.ApplicationFlags.HANDLES_COMMAND_LINE | Gio.ApplicationFlags.HANDLES_OPEN,
-        debug=debug,
     )
     sys.exit(application.run(sys.argv))
