--- a/data/meson.build
+++ b/data/meson.build
@@ -71,6 +71,7 @@ endif
 
 blueprint_files = [
   'ui/dialogs/delete-style.blp',
+  'ui/dialogs/invalid-project.blp',
   'ui/dialogs/reset-import-settings.blp',
   'ui/dialogs/save-project-changes.blp',
   'ui/dialogs/save-style-changes.blp',
