Ditch UK spelling on visualization

--- a/data/se.sjoerd.Graphs.desktop.in
+++ b/data/se.sjoerd.Graphs.desktop.in
@@ -8,7 +8,7 @@ Categories=Education;Science
 StartupNotify=true
 DBusActivatable=true
 MimeType=application/graphs;text/mplstyle;text/plain;text/xy;text/dat;text/csv;text/xrdml;text/xry;text/txt
-Keywords=Plotting;Graph;Graphing;Science;Mathematics;Math;Equations;Data;Plot;Visualisation;Visualization;Fitting;xrdml;
+Keywords=Plotting;Graph;Graphing;Science;Mathematics;Math;Equations;Data;Plot;Visualization;Fitting;xrdml;
 X-Purism-FormFactor=Workstation;Mobile;
 Actions=new-window;style-editor;
 
