--- a/data/meson.build
+++ b/data/meson.build
@@ -78,10 +78,10 @@ blueprint_files = [
   'ui/add-equation.blp',
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
-  'ui/edit-item.blp',
   'ui/edit-item-data.blp',
   'ui/edit-item-equation.blp',
   'ui/edit-item-generated-data.blp',
+  'ui/edit-item-item.blp',
   'ui/export-figure.blp',
   'ui/figure-settings-dialog.blp',
   'ui/figure-settings-page.blp',
