--- a/data/meson.build
+++ b/data/meson.build
@@ -75,13 +75,13 @@ blueprint_files = [
   'ui/dialogs/reset-import-settings.blp',
   'ui/dialogs/save-project-changes.blp',
   'ui/dialogs/save-style-changes.blp',
+  'ui/edit-item/base.blp',
+  'ui/edit-item/data.blp',
+  'ui/edit-item/equation.blp',
+  'ui/edit-item/generated-data.blp',
   'ui/add-equation.blp',
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
-  'ui/edit-item-data.blp',
-  'ui/edit-item-equation.blp',
-  'ui/edit-item-generated-data.blp',
-  'ui/edit-item-item.blp',
   'ui/export-figure.blp',
   'ui/figure-settings-dialog.blp',
   'ui/figure-settings-page.blp',
