--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -47,6 +47,7 @@ config_dep = valac.find_library('config',
 graphs_lib = shared_library('graphs',
   files(
     'sidebar/edit_item.vala',
+    'sidebar/main.vala',
     'actions.vala',
     'add_equation.vala',
     'application.vala',
