move operations file
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -48,6 +48,7 @@ graphs_lib = shared_library('graphs',
   files(
     'sidebar/edit_item.vala',
     'sidebar/main.vala',
+    'sidebar/operations.vala',
     'actions.vala',
     'add_equation.vala',
     'application.vala',
@@ -62,7 +63,6 @@ graphs_lib = shared_library('graphs',
     'item.vala',
     'item_box.vala',
     'misc.vala',
-    'operations.vala',
     'project.vala',
     'python_helper.vala',
     'smoothen_settings.vala',
