--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,13 +6,13 @@ data/ui/dialogs/delete-style.blp
 data/ui/dialogs/reset-import-settings.blp
 data/ui/dialogs/save-project-changes.blp
 data/ui/dialogs/save-style-changes.blp
+data/ui/edit-item/base.blp
+data/ui/edit-item/data.blp
+data/ui/edit-item/equation.blp
+data/ui/edit-item/generated-data.blp
 data/ui/add-equation.blp
 data/ui/add-style.blp
 data/ui/curve-fitting.blp
-data/ui/edit-item.blp
-data/ui/edit-item-data.blp
-data/ui/edit-item-equation.blp
-data/ui/edit-item-generated-data.blp
 data/ui/export-figure.blp
 data/ui/figure-settings-dialog.blp
 data/ui/figure-settings-page.blp
