wip: rework import
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/data/meson.build
+++ b/data/meson.build
@@ -79,6 +79,8 @@ blueprint_files = [
   'ui/edit-item/data.blp',
   'ui/edit-item/equation.blp',
   'ui/edit-item/generated-data.blp',
+  'ui/import/dialog.blp',
+  'ui/import/file-row.blp',
   'ui/add-equation.blp',
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
@@ -87,7 +89,6 @@ blueprint_files = [
   'ui/figure-settings-page.blp',
   'ui/fitting-parameters.blp',
   'ui/generate-data.blp',
-  'ui/import.blp',
   'ui/import-columns.blp',
   'ui/item-box.blp',
   'ui/operations.blp',
