--- a/data/meson.build
+++ b/data/meson.build
@@ -81,6 +81,7 @@ blueprint_files = [
   'ui/edit-item/generated-data.blp',
   'ui/import/dialog.blp',
   'ui/import/file-row.blp',
+  'ui/import/mode-columns.blp',
   'ui/add-equation.blp',
   'ui/add-style.blp',
   'ui/curve-fitting.blp',
@@ -89,7 +90,6 @@ blueprint_files = [
   'ui/figure-settings-page.blp',
   'ui/fitting-parameters.blp',
   'ui/generate-data.blp',
-  'ui/import-columns.blp',
   'ui/item-box.blp',
   'ui/operations.blp',
   'ui/smoothen-settings.blp',
