--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ dependencies = [
   dependency('gobject-2.0'),
   dependency('gio-2.0'),
   dependency('gtk4'),
-  dependency('libadwaita-1', version: '>= 1.5'),
+  dependency('libadwaita-1', version: '>= 1.8.alpha'),
   dependency('gee-0.8'),
 ]
 
