--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ inline-quotes = double
 
 per-file-ignores =
 	data.py: PIE786
+	file_import.py: PIE786
         migrate.py: SCS113
         operations.py: PIE798
 exclude =
