wip: rework import
Signed-off-by: Christoph Matthias Kohnen <mail@cmkohnen.de>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -34,6 +34,13 @@ data/ui/style-preview.blp
 data/ui/transform.blp
 data/ui/window.blp
 data/ui/window-shortcuts.blp
+graphs/file_import/parsers/__init__.py
+graphs/file_import/parsers/columns.py
+graphs/file_import/parsers/project.py
+graphs/file_import/parsers/xrdml.py
+graphs/file_import/parsers/xry.py
+graphs/file_import/__init__.py
+graphs/file_import/file_import.vala
 graphs/sidebar/edit_item.py
 graphs/sidebar/edit_item.vala
 graphs/sidebar/figure_settings.vala
@@ -54,8 +61,6 @@ graphs/export_figure.vala
 graphs/export_items.py
 graphs/export_items.vala
 graphs/figure_settings.vala
-graphs/file_import.py
-graphs/file_import.vala
 graphs/file_io.py
 graphs/generate_data.vala
 graphs/item.py
@@ -65,7 +70,6 @@ graphs/migrate.py
 graphs/misc.py
 graphs/misc.vala
 graphs/operations.py
-graphs/parse_file.py
 graphs/project.py
 graphs/project.vala
 graphs/python_helper.py
