--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ inline-quotes = double
 per-file-ignores =
 	graphs/file_import/__init__.py: PIE786
 	graphs/data.py: PIE786
+	graphs/file_io.py: A001
         graphs/migrate.py: SCS113
         graphs/operations.py: PIE798
 exclude =
